elements/pf-label/pf-label.css
:host {
  position: relative;
  white-space: nowrap;
  border: 0;

  --_label-link-hover-border-color:
    var(--pf-c-label__content--link--hover--before--BorderColor,
      var(--pf-global--BorderColor--200, #8a8d90));
}

pf-icon, ::slotted(pf-icon) {
  color: currentColor;
}

:host,
#container {
  display: inline-flex;
  align-items: center;
  vertical-align: middle;
}

#container {
  overflow: clip;
  overflow-clip-margin: 3px;
  text-overflow: ellipsis;
  white-space: nowrap;
  border-width: 0;
  /** label top padding */
  padding-top: var(--pf-c-label--PaddingTop, var(--pf-global--spacer--xs, 0.25rem));
  /** label left padding */
  padding-left: var(--pf-c-label--PaddingLeft, var(--pf-global--spacer--sm, 0.5rem));
  /** label bottom padding */
  padding-bottom: var(--pf-c-label--PaddingBottom, var(--pf-global--spacer--xs, 0.25rem));
  /** label right padding */
  padding-right: var(--pf-c-label--PaddingRight, var(--pf-global--spacer--sm, 0.5rem));
  /** label font size */
  font-size: var(--pf-c-label--FontSize, var(--pf-global--FontSize--sm, 0.875rem));
  /** label text color */
  color: var(--pf-c-label--Color, var(--pf-global--Color--100, #151515));
  /** label background color */
  background-color: var(--pf-c-label--BackgroundColor, var(--pf-global--palette--black-150, #f5f5f5));
  /** label border radius */
  border-radius: var(--pf-c-label--BorderRadius, 30em);
  /** label content max width */
  max-width: var(--pf-c-label__content--MaxWidth, 100%);
  /** label content text color */
  color: var(--pf-c-label__content--Color, var(--pf-global--Color--100, #151515));

  --pf-global--icon--FontSize--sm: 14px;
}

#container::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  pointer-events: none;
  content: "";
  border-radius: var(--pf-c-label--BorderRadius, 30em);
  /** label content border width and color */
  border: var(--pf-c-label__content--before--BorderWidth, 1px) solid var(--pf-c-label__content--before--BorderColor, var(--pf-global--palette--black-300, #d2d2d2));
}

[part=icon] {
  display: none;
  pointer-events: none;
}

.hasIcon [part=icon] {
  display: inline-flex;
  width: 1em;
}

.compact {
  /** compact label top padding */
  --pf-c-label--PaddingTop: var(--pf-c-label--m-compact--PaddingTop, 0);
  /** compact label right padding */
  --pf-c-label--PaddingRight: var(--pf-c-label--m-compact--PaddingRight, var(--pf-global--spacer--sm, 0.5rem));
  /** compact label bottom padding */
  --pf-c-label--PaddingBottom: var(--pf-c-label--m-compact--PaddingBottom, 0);
  /** compact label left padding */
  --pf-c-label--PaddingLeft: var(--pf-c-label--m-compact--PaddingLeft, var(--pf-global--spacer--sm, 0.5rem));
  --pf-global--icon--FontSize--sm: 12px;
}

.outline {
  /** outline label background color */
  --pf-c-label--BackgroundColor: var(--pf-c-label--m-outline--BackgroundColor, #ffffff);
  --pf-c-label__content--before--BorderColor: var(--pf-global--palette--black-300, #d2d2d2);

  --_label-link-hover-border-color:
    var(--pf-c-label--m-outline__content--link--hover--before--BorderColor,
      var(--pf-global--BorderColor--100, #d2d2d2));
}

.blue {
  /** blue label content text color */
  --pf-c-label__content--Color: var(--pf-c-label--m-blue__content--Color, var(--pf-global--info-color--200, #002952));
  /** blue label background color */
  --pf-c-label--BackgroundColor: var(--pf-c-label--m-blue--BackgroundColor, var(--pf-global--palette--blue-50, #e7f1fa));
  /** blue label content border color */
  --pf-c-label__content--before--BorderColor: var(--pf-c-label--m-blue__content--before--BorderColor, var(--pf-global--palette--blue-100, #bee1f4));

  --_label-link-hover-border-color:
    var(--pf-c-label__content--link--hover--before--BorderColor,
      var(--pf-c-label--m-blue__content--link--hover--before--BorderColor,
        var(--pf-global--primary-color--100, #06c)));

  --_label-icon-color: var(--pf-c-label__icon--Color, var(--pf-c-label--m-blue__icon--Color, var(--pf-global--primary-color--100, #06c)));
}

.blue.outline {
  /** outline blue label content text color */
  --pf-c-label__content--Color: var(--pf-c-label--m-outline__content--Color, var(--pf-c-label--m-outline--m-blue__content--Color, var(--pf-global--primary-color--100, #06c)));

  --_label-link-hover-border-color:
    var(--pf-c-label--m-outline__content--link--hover--before--BorderColor,
      var(--pf-c-label--m-outline--m-blue__content--link--hover--before--BorderColor,
        var(--pf-global--BorderColor--100, #d2d2d2)));
}

.cyan {
  /** cyan label content text color */
  --pf-c-label__content--Color: var(--pf-c-label--m-cyan__content--Color, var(--pf-global--default-color--300, #003737));
  /** cyan label background color */
  --pf-c-label--BackgroundColor: var(--pf-c-label--m-cyan--BackgroundColor, var(--pf-global--palette--cyan-50, #f2f9f9));
  /** cyan label content border color */
  --pf-c-label__content--before--BorderColor: var(--pf-c-label--m-cyan__content--before--BorderColor, var(--pf-global--palette--cyan-100, #a2d9d9));

  --_label-link-hover-border-color:
    var(--pf-c-label__content--link--hover--before--BorderColor,
      var(--pf-c-label--m-cyan__content--link--hover--before--BorderColor,
        var(--pf-global--default-color--200, #009596)));

  --_label-icon-color: var(--pf-c-label__icon--Color, var(--pf-c-label--m-cyan__icon--Color, var(--pf-global--default-color--200, #009596)));
}

.cyan.outline {
  /** outline cyan label content text color */
  --pf-c-label__content--Color: var(--pf-c-label--m-outline__content--Color, var(--pf-c-label--m-outline--m-cyan__content--Color, var(--pf-global--palette--cyan-400, #005f60)));

  --_label-link-hover-border-color:
    var(--pf-c-label--m-outline__content--link--hover--before--BorderColor,
      var(--pf-c-label--m-outline--m-cyan__content--link--hover--before--BorderColor,
        var(--pf-global--BorderColor--100, #d2d2d2)));
}
/* ... */

